sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa5 0x46 xxx
simstep 6 1
